[gd_scene load_steps=2 format=3 uid="uid://cxfvk6f12nltj"]

[ext_resource type="Script" uid="uid://dvpt88d2e2rpg" path="res://source/level_editor/property_setter.gd" id="1_17ay1"]

[node name="PropertySetter" type="Control"]
custom_minimum_size = Vector2(192, 64)
layout_mode = 3
anchor_right = 0.2295
anchor_bottom = 0.099
offset_right = -0.384018
offset_bottom = -0.152008
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_17ay1")
metadata/_edit_use_anchors_ = true

[node name="MaterialListButton" type="MenuButton" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Material"
item_count = 2
popup/item_0/text = "Procedural"
popup/item_0/checkable = 2
popup/item_0/id = 0
popup/item_1/text = "Glass"
popup/item_1/checkable = 2
popup/item_1/id = 1

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
text = "Property name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
text = "Property value"

[node name="SpinBox" type="SpinBox" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
allow_greater = true
allow_lesser = true

[node name="CheckBox" type="CheckBox" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Property name"
alignment = 1

[node name="MaterialOptionButton" type="OptionButton" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
item_count = 2
popup/item_0/text = "Procedural"
popup/item_0/id = 0
popup/item_1/text = "Glass"
popup/item_1/id = 1

[node name="Vector3SpinBoxes" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpinBoxX" type="SpinBox" parent="Vector3SpinBoxes"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.333
anchor_bottom = 1.0
offset_right = 0.0880051
grow_horizontal = 2
grow_vertical = 2
step = 0.05
allow_greater = true
allow_lesser = true

[node name="SpinBoxY" type="SpinBox" parent="Vector3SpinBoxes"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_right = 0.667
anchor_bottom = 1.0
offset_left = 0.0880051
offset_right = -0.0880127
grow_horizontal = 2
grow_vertical = 2
step = 0.05
allow_greater = true
allow_lesser = true

[node name="SpinBoxZ" type="SpinBox" parent="Vector3SpinBoxes"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.667
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.0880127
grow_horizontal = 2
grow_vertical = 2
step = 0.05
allow_greater = true
allow_lesser = true

[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="toggled" from="CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="item_selected" from="MaterialOptionButton" to="." method="_on_material_option_button_item_selected"]
[connection signal="value_changed" from="Vector3SpinBoxes/SpinBoxX" to="." method="_on_spin_box_x_value_changed"]
[connection signal="value_changed" from="Vector3SpinBoxes/SpinBoxY" to="." method="_on_spin_box_y_value_changed"]
[connection signal="value_changed" from="Vector3SpinBoxes/SpinBoxZ" to="." method="_on_spin_box_z_value_changed"]
